antlr/tempusParser.py
# Generated from tempus.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tempusParser ( Parser ):

    grammarFileName = "tempus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'.'", "'@'", "'if'", "'else'", "'match'", "'case'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "WS", "NL", "MLC", "SLC", 
                      "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "DOT", "PRIME", "KW_IF", "KW_ELSE", "KW_MATCH", 
                      "KW_CASE", "TYPE_OP", "BINARY_OP", "ASSIGN_OP", "INT", 
                      "FLOAT", "STRING", "IDENT" ]

    RULE_program = 0
    RULE_ident = 1
    RULE_uninit_decl = 2
    RULE_untyped_decl = 3
    RULE_typed_expr = 4
    RULE_full_decl = 5
    RULE_constant = 6
    RULE_atom = 7
    RULE_expr = 8
    RULE_if_stmt = 9
    RULE_match_stmt = 10
    RULE_case_stmt = 11
    RULE_stmt = 12
    RULE_stmt_list = 13
    RULE_paren_list = 14
    RULE_brace_list = 15
    RULE_brack_list = 16
    RULE_dummy = 17

    ruleNames =  [ "program", "ident", "uninit_decl", "untyped_decl", "typed_expr", 
                   "full_decl", "constant", "atom", "expr", "if_stmt", "match_stmt", 
                   "case_stmt", "stmt", "stmt_list", "paren_list", "brace_list", 
                   "brack_list", "dummy" ]

    EOF = Token.EOF
    T__0=1
    WS=2
    NL=3
    MLC=4
    SLC=5
    SEMI=6
    LPAREN=7
    RPAREN=8
    LBRACE=9
    RBRACE=10
    LBRACK=11
    RBRACK=12
    DOT=13
    PRIME=14
    KW_IF=15
    KW_ELSE=16
    KW_MATCH=17
    KW_CASE=18
    TYPE_OP=19
    BINARY_OP=20
    ASSIGN_OP=21
    INT=22
    FLOAT=23
    STRING=24
    IDENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.StmtContext)
            else:
                return self.getTypedRuleContext(tempusParser.StmtContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(tempusParser.SEMI)
            else:
                return self.getToken(tempusParser.SEMI, i)

        def getRuleIndex(self):
            return tempusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tempusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 63892096) != 0):
                self.state = 36
                self.stmt()
                self.state = 37
                self.match(tempusParser.SEMI)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(tempusParser.IDENT)
            else:
                return self.getToken(tempusParser.IDENT, i)

        def PRIME(self):
            return self.getToken(tempusParser.PRIME, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(tempusParser.DOT)
            else:
                return self.getToken(tempusParser.DOT, i)

        def getRuleIndex(self):
            return tempusParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = tempusParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ident)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 44
                self.match(tempusParser.PRIME)


            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 47
                self.match(tempusParser.DOT)


            self.state = 50
            self.match(tempusParser.IDENT)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 51
                    self.match(tempusParser.DOT)
                    self.state = 52
                    self.match(tempusParser.IDENT) 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Uninit_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(tempusParser.IdentContext,0)


        def TYPE_OP(self):
            return self.getToken(tempusParser.TYPE_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(tempusParser.ExprContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_uninit_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUninit_decl" ):
                listener.enterUninit_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUninit_decl" ):
                listener.exitUninit_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUninit_decl" ):
                return visitor.visitUninit_decl(self)
            else:
                return visitor.visitChildren(self)




    def uninit_decl(self):

        localctx = tempusParser.Uninit_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_uninit_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.ident()
            self.state = 59
            self.match(tempusParser.TYPE_OP)
            self.state = 60
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Untyped_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(tempusParser.IdentContext,0)


        def ASSIGN_OP(self):
            return self.getToken(tempusParser.ASSIGN_OP, 0)

        def expr(self):
            return self.getTypedRuleContext(tempusParser.ExprContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_untyped_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntyped_decl" ):
                listener.enterUntyped_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntyped_decl" ):
                listener.exitUntyped_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntyped_decl" ):
                return visitor.visitUntyped_decl(self)
            else:
                return visitor.visitChildren(self)




    def untyped_decl(self):

        localctx = tempusParser.Untyped_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_untyped_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.ident()
            self.state = 63
            self.match(tempusParser.ASSIGN_OP)
            self.state = 64
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typed_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_OP(self):
            return self.getToken(tempusParser.TYPE_OP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.ExprContext)
            else:
                return self.getTypedRuleContext(tempusParser.ExprContext,i)


        def ASSIGN_OP(self):
            return self.getToken(tempusParser.ASSIGN_OP, 0)

        def getRuleIndex(self):
            return tempusParser.RULE_typed_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyped_expr" ):
                listener.enterTyped_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyped_expr" ):
                listener.exitTyped_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyped_expr" ):
                return visitor.visitTyped_expr(self)
            else:
                return visitor.visitChildren(self)




    def typed_expr(self):

        localctx = tempusParser.Typed_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typed_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(tempusParser.TYPE_OP)
            self.state = 67
            self.expr()
            self.state = 68
            self.match(tempusParser.ASSIGN_OP)
            self.state = 69
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(tempusParser.IdentContext,0)


        def TYPE_OP(self):
            return self.getToken(tempusParser.TYPE_OP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.ExprContext)
            else:
                return self.getTypedRuleContext(tempusParser.ExprContext,i)


        def ASSIGN_OP(self):
            return self.getToken(tempusParser.ASSIGN_OP, 0)

        def getRuleIndex(self):
            return tempusParser.RULE_full_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFull_decl" ):
                listener.enterFull_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFull_decl" ):
                listener.exitFull_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFull_decl" ):
                return visitor.visitFull_decl(self)
            else:
                return visitor.visitChildren(self)




    def full_decl(self):

        localctx = tempusParser.Full_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_full_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.ident()
            self.state = 72
            self.match(tempusParser.TYPE_OP)
            self.state = 73
            self.expr()
            self.state = 74
            self.match(tempusParser.ASSIGN_OP)
            self.state = 75
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(tempusParser.INT, 0)

        def FLOAT(self):
            return self.getToken(tempusParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(tempusParser.STRING, 0)

        def getRuleIndex(self):
            return tempusParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = tempusParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def full_decl(self):
            return self.getTypedRuleContext(tempusParser.Full_declContext,0)


        def uninit_decl(self):
            return self.getTypedRuleContext(tempusParser.Uninit_declContext,0)


        def untyped_decl(self):
            return self.getTypedRuleContext(tempusParser.Untyped_declContext,0)


        def typed_expr(self):
            return self.getTypedRuleContext(tempusParser.Typed_exprContext,0)


        def ident(self):
            return self.getTypedRuleContext(tempusParser.IdentContext,0)


        def constant(self):
            return self.getTypedRuleContext(tempusParser.ConstantContext,0)


        def paren_list(self):
            return self.getTypedRuleContext(tempusParser.Paren_listContext,0)


        def brack_list(self):
            return self.getTypedRuleContext(tempusParser.Brack_listContext,0)


        def brace_list(self):
            return self.getTypedRuleContext(tempusParser.Brace_listContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = tempusParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.full_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.uninit_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.untyped_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.typed_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.ident()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.constant()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.paren_list()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.brack_list()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.brace_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.AtomContext)
            else:
                return self.getTypedRuleContext(tempusParser.AtomContext,i)


        def BINARY_OP(self, i:int=None):
            if i is None:
                return self.getTokens(tempusParser.BINARY_OP)
            else:
                return self.getToken(tempusParser.BINARY_OP, i)

        def getRuleIndex(self):
            return tempusParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = tempusParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 90
                    self.atom()

                else:
                    raise NoViableAltException(self)
                self.state = 93 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self.match(tempusParser.BINARY_OP)
                    self.state = 97 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 96
                            self.atom()

                        else:
                            raise NoViableAltException(self)
                        self.state = 99 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
             
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IF(self):
            return self.getToken(tempusParser.KW_IF, 0)

        def paren_list(self):
            return self.getTypedRuleContext(tempusParser.Paren_listContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.StmtContext)
            else:
                return self.getTypedRuleContext(tempusParser.StmtContext,i)


        def KW_ELSE(self):
            return self.getToken(tempusParser.KW_ELSE, 0)

        def getRuleIndex(self):
            return tempusParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = tempusParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_stmt)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(tempusParser.KW_IF)
                self.state = 107
                self.paren_list()
                self.state = 108
                self.stmt()
                self.state = 109
                self.match(tempusParser.KW_ELSE)
                self.state = 110
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(tempusParser.KW_IF)
                self.state = 113
                self.paren_list()
                self.state = 114
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Match_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_MATCH(self):
            return self.getToken(tempusParser.KW_MATCH, 0)

        def paren_list(self):
            return self.getTypedRuleContext(tempusParser.Paren_listContext,0)


        def brace_list(self):
            return self.getTypedRuleContext(tempusParser.Brace_listContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_match_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatch_stmt" ):
                listener.enterMatch_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatch_stmt" ):
                listener.exitMatch_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatch_stmt" ):
                return visitor.visitMatch_stmt(self)
            else:
                return visitor.visitChildren(self)




    def match_stmt(self):

        localctx = tempusParser.Match_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_match_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(tempusParser.KW_MATCH)
            self.state = 119
            self.paren_list()
            self.state = 120
            self.brace_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Case_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CASE(self):
            return self.getToken(tempusParser.KW_CASE, 0)

        def paren_list(self):
            return self.getTypedRuleContext(tempusParser.Paren_listContext,0)


        def brace_list(self):
            return self.getTypedRuleContext(tempusParser.Brace_listContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_case_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase_stmt" ):
                listener.enterCase_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase_stmt" ):
                listener.exitCase_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase_stmt" ):
                return visitor.visitCase_stmt(self)
            else:
                return visitor.visitChildren(self)




    def case_stmt(self):

        localctx = tempusParser.Case_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_case_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(tempusParser.KW_CASE)
            self.state = 123
            self.paren_list()
            self.state = 124
            self.brace_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(tempusParser.AtomContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(tempusParser.If_stmtContext,0)


        def match_stmt(self):
            return self.getTypedRuleContext(tempusParser.Match_stmtContext,0)


        def case_stmt(self):
            return self.getTypedRuleContext(tempusParser.Case_stmtContext,0)


        def getRuleIndex(self):
            return tempusParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = tempusParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 9, 11, 13, 14, 19, 22, 23, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.atom()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.if_stmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match_stmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.case_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tempusParser.StmtContext)
            else:
                return self.getTypedRuleContext(tempusParser.StmtContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(tempusParser.SEMI)
            else:
                return self.getToken(tempusParser.SEMI, i)

        def getRuleIndex(self):
            return tempusParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = tempusParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.stmt()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 133
                    self.match(tempusParser.T__0)
                    self.state = 134
                    self.stmt()
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.stmt()
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 141
                        self.match(tempusParser.SEMI)
                        self.state = 142
                        self.stmt() 
                    self.state = 147
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 148
                    self.match(tempusParser.SEMI)


                pass

